fix: remove readme-info, and add permissions to snake

--- a/.github/workflows/snake-animation.yml
+++ b/.github/workflows/snake-animation.yml
@@ -4,9 +4,15 @@ on:
   workflow_dispatch: # for manual workflow trigger
   schedule:
     - cron: "0 0 * * *" # runs at every 12AM UTC
+  # run on every push on the master branch
+  push:
+    branches:
+    - master
 
 jobs:
   generate:
+    permissions: 
+      contents: write
     runs-on: ubuntu-latest
     timeout-minutes: 10
     
